reverted ascension agenda changes, updated evolved ethic agendas to use correct loc

--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -1153,3 +1153,9 @@ TEC_TAG_BONUS: "§HBonus:§!"
 
 	empire_not_capitalism:0 "$TRIGGER_FAIL$Our empire does not embrace the necessary §Y$ethic_capitalism$§! ideals."
 
+	requires_elitist: "$TRIGGER_FAIL$$civic_tooltip_elitist$"
+	requires_pluralist: "$TRIGGER_FAIL$$civic_tooltip_pluralist$"
+	requires_ecologist: "$TRIGGER_FAIL$$civic_tooltip_ecologist$"
+	requires_industrialist: "$TRIGGER_FAIL$$civic_tooltip_industrialist$"
+	requires_cooperative: "$TRIGGER_FAIL$$civic_tooltip_cooperative$"
+	requires_competitive: "$TRIGGER_FAIL$$civic_tooltip_competitive$"
