Fragmenting UI improvement and costs

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -312,10 +312,20 @@ tec_cui_aiuth_fragment_general_effect: "Fragments the main AI Node into a new $g
 tec_cui_aiuth_fragment_governor_effect: "Fragments the main AI Node into a new $governor_with_icon$ AI Node, which can only be used to fill councilor positions.\n\nThe fragmented node will take monthly §Y$tec_loc_sr_tec_ai_power$§! Upkeep, but will not take §YLeader Capacity§! and can only get §YCouncilor Traits§!"
 tec_cui_aiuth_fragment_scientist_effect: "Fragments the main AI Node into a new $scientist_with_icon$ AI Node, which can only be used to fill councilor positions.\n\nThe fragmented node will take monthly §Y$tec_loc_sr_tec_ai_power$§! Upkeep, but will not take §YLeader Capacity§! and can only get §YCouncilor Traits§!"
 
-tec_aiauth_experience_tooltip: "\nAI Node Leaders do not gain experience normally. Spare §Y$tec_loc_sr_tec_ai_power$§! gets converted into experience, distributed in a weighted manner between AI nodes.\n\nExperience Weight Share/Total: §Y[tec_aiauth_node_weight_tooltip]/[owner.tec_aiauth_total_weight]§!"
+tec_aiauth_experience_tooltip: "\nAI Node Leaders do not gain experience normally. Spare §Y$tec_loc_sr_tec_ai_power$§! gets converted into experience, distributed in a weighted manner between AI nodes.[tec_aiauth_node_share_total_tooltip]"
+
+tec_aiauth_node_share_total_tooltip: "\n\nExperience Weight Share/Total: §Y[tec_aiauth_node_weight_tooltip]/[owner.tec_aiauth_total_weight]§!"
 
 tec_can_not_dismiss_aiauth_planetary_nodes: "§RCan't Dismiss Planetary AI Nodes, you must demolish the $building_tec_planetary_node_center$§!"
 
+tec_cui_aiauth_fragmenting_node: "$TRIGGER_FAIL$Cannot fragment another AI Node as a node is already being fragmented in this moment."
+tec_cui_aiauth_fragmenting_cost_effect: "\n\nFragmentation will cost §Y£unity£ [tec_aiauth_fragment_cost] Unity§!"
+
+tec_cui_aiauth_refragment_node: "This node will be re-fragmented, generating a new set of traits and qualities."
+tec_cui_aiauth_finish_fragmenting_node: "This AI Node will join your empire."
+
+TEC_REFRAGMENT_NODE: "Re-fragment Node"
+TEC_FRAGMENT_NODE: "Finish Fragmentation"
 # Extra
 
 tec_loc_empire_scope_effects: "£empire£ §YEmpire§!"
