tooltip + civic order draft

--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -1923,10 +1923,10 @@
 
 # These are autogen modifiers for custom modifiers for avoiding log spam
 # DO NOT DELETE
- planet_politicians_all_research_produces_add:0 "INVISIBLE_CUSTOM_MODIFIER"
- planet_administrators_all_research_upkeep_add:0 "INVISIBLE_CUSTOM_MODIFIER"
- planet_administrators_all_research_produces_add:0 "INVISIBLE_CUSTOM_MODIFIER"
- planet_researchers_all_research_produces_add:0 "INVISIBLE_CUSTOM_MODIFIER"
+ planet_politicians_all_research_produces_add:0 "$mod_planet_politicians_all_research_produces_add$"
+ planet_administrators_all_research_upkeep_add:0 "$mod_planet_administrators_all_research_upkeep_add$"
+ planet_administrators_all_research_produces_add:0 "$mod_planet_administrators_all_research_produces_add$"
+ planet_researchers_all_research_produces_add:0 "$mod_planet_researchers_all_research_produces_add$"
  fertility_cult_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
  fertility_lithoid_cult_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
  fertility_sedimentary_cult_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
@@ -1940,77 +1940,77 @@
  wealth_cult_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
  death_cult_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
  death_lithoid_cult_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_egalitarian_A_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_egalitarian_B_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_egalitarian_C_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_authoritarian_A_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_authoritarian_B_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_authoritarian_C_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_xenophobe_A_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_xenophobe_B_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_xenophobe_C_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_xenophile_A_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_xenophile_B_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_xenophile_C_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_militarist_A_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_militarist_B_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_militarist_C_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_pacifist_A_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_pacifist_B_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_pacifist_C_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_materialist_phy_particles_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_materialist_phy_field_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_materialist_phy_computing_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_materialist_soc_military_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_materialist_soc_new_worlds_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_materialist_soc_biology_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_materialist_soc_statecraft_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_materialist_eng_industry_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_materialist_eng_materials_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_materialist_eng_propulsion_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_materialist_eng_voidcraft_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_materialist_ai_cheating_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_spiritualist_cult_fertility_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_spiritualist_cult_multiplicity_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_spiritualist_cult_prosperity_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_spiritualist_cult_war_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_spiritualist_cult_metal_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_spiritualist_cult_knowledge_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_spiritualist_cult_machine_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_spiritualist_cult_gaia_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_competitive_A_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_competitive_B_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_competitive_C_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_cooperative_A_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_cooperative_B_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_cooperative_C_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_industrialist_A_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_industrialist_B_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_industrialist_C_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_ecologist_A_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_ecologist_B_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_ecologist_C_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_elitist_A_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_elitist_B_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_elitist_C_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_pluralist_A_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_pluralist_B_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_pluralist_C_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_gestalt_empathy_A_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_gestalt_empathy_B_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_gestalt_empathy_C_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_gestalt_apathy_A_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_gestalt_apathy_B_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_gestalt_apathy_C_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_gestalt_preservation_A_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_gestalt_preservation_B_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_gestalt_preservation_C_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_gestalt_overconsumption_A_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_gestalt_overconsumption_B_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_gestalt_overconsumption_C_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_gestalt_introspective_A_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_gestalt_introspective_B_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_gestalt_introspective_C_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_gestalt_extrospective_A_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_gestalt_extrospective_B_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
- tec_gestalt_extrospective_C_modifier:0 "INVISIBLE_CUSTOM_MODIFIER"
+ tec_egalitarian_A_modifier:0 "$policy_option_tec_egalitarian_A$"
+ tec_egalitarian_B_modifier:0 "$policy_option_tec_egalitarian_B$"
+ tec_egalitarian_C_modifier:0 "$policy_option_tec_egalitarian_C$"
+ tec_authoritarian_A_modifier:0 "$policy_option_tec_authoritarian_A$"
+ tec_authoritarian_B_modifier:0 "$policy_option_tec_authoritarian_B$"
+ tec_authoritarian_C_modifier:0 "$policy_option_tec_authoritarian_C$"
+ tec_xenophobe_A_modifier:0 "$policy_option_tec_xenophobe_A$"
+ tec_xenophobe_B_modifier:0 "$policy_option_tec_xenophobe_B$"
+ tec_xenophobe_C_modifier:0 "$policy_option_tec_xenophobe_C$"
+ tec_xenophile_A_modifier:0 "$policy_option_tec_xenophile_A$"
+ tec_xenophile_B_modifier:0 "$policy_option_tec_xenophile_B$"
+ tec_xenophile_C_modifier:0 "$policy_option_tec_xenophile_C$"
+ tec_militarist_A_modifier:0 "$policy_option_tec_militarist_A$"
+ tec_militarist_B_modifier:0 "$policy_option_tec_militarist_B$"
+ tec_militarist_C_modifier:0 "$policy_option_tec_militarist_C$"
+ tec_pacifist_A_modifier:0 "$policy_option_tec_pacifist_A$"
+ tec_pacifist_B_modifier:0 "$policy_option_tec_pacifist_B$"
+ tec_pacifist_C_modifier:0 "$policy_option_tec_pacifist_C$"
+ tec_materialist_phy_particles_modifier:0 "$policy_tec_materialist_ethic_policy$"
+ tec_materialist_phy_field_modifier:0 "$policy_tec_materialist_ethic_policy$"
+ tec_materialist_phy_computing_modifier:0 "$policy_tec_materialist_ethic_policy$"
+ tec_materialist_soc_military_modifier:0 "$policy_tec_materialist_ethic_policy$"
+ tec_materialist_soc_new_worlds_modifier:0 "$policy_tec_materialist_ethic_policy$"
+ tec_materialist_soc_biology_modifier:0 "$policy_tec_materialist_ethic_policy$"
+ tec_materialist_soc_statecraft_modifier:0 "$policy_tec_materialist_ethic_policy$"
+ tec_materialist_eng_industry_modifier:0 "$policy_tec_materialist_ethic_policy$"
+ tec_materialist_eng_materials_modifier:0 "$policy_tec_materialist_ethic_policy$"
+ tec_materialist_eng_propulsion_modifier:0 "$policy_tec_materialist_ethic_policy$"
+ tec_materialist_eng_voidcraft_modifier:0 "$policy_tec_materialist_ethic_policy$"
+ tec_materialist_ai_cheating_modifier:0 "$policy_tec_materialist_ethic_policy$"
+ tec_spiritualist_cult_fertility_modifier:0 "$policy_tec_spiritualist_ethic_policy$"
+ tec_spiritualist_cult_multiplicity_modifier:0 "$policy_tec_spiritualist_ethic_policy$"
+ tec_spiritualist_cult_prosperity_modifier:0 "$policy_tec_spiritualist_ethic_policy$"
+ tec_spiritualist_cult_war_modifier:0 "$policy_tec_spiritualist_ethic_policy$"
+ tec_spiritualist_cult_metal_modifier:0 "$policy_tec_spiritualist_ethic_policy$"
+ tec_spiritualist_cult_knowledge_modifier:0 "$policy_tec_spiritualist_ethic_policy$"
+ tec_spiritualist_cult_machine_modifier:0 "$policy_tec_spiritualist_ethic_policy$"
+ tec_spiritualist_cult_gaia_modifier:0 "$policy_tec_spiritualist_ethic_policy$"
+ tec_competitive_A_modifier:0 "$policy_option_tec_competitive_A$"
+ tec_competitive_B_modifier:0 "$policy_option_tec_competitive_B$"
+ tec_competitive_C_modifier:0 "$policy_option_tec_competitive_C$"
+ tec_cooperative_A_modifier:0 "$policy_option_tec_cooperative_A$"
+ tec_cooperative_B_modifier:0 "$policy_option_tec_cooperative_B$"
+ tec_cooperative_C_modifier:0 "$policy_option_tec_cooperative_C$"
+ tec_industrialist_A_modifier:0 "$policy_option_tec_industrialist_A$"
+ tec_industrialist_B_modifier:0 "$policy_option_tec_industrialist_B$"
+ tec_industrialist_C_modifier:0 "$policy_option_tec_industrialist_C$"
+ tec_ecologist_A_modifier:0 "$policy_option_tec_ecologist_A$"
+ tec_ecologist_B_modifier:0 "$policy_option_tec_ecologist_B$"
+ tec_ecologist_C_modifier:0 "$policy_option_tec_ecologist_C$"
+ tec_elitist_A_modifier:0 "$policy_option_tec_elitist_A$"
+ tec_elitist_B_modifier:0 "$policy_option_tec_elitist_B$"
+ tec_elitist_C_modifier:0 "$policy_option_tec_elitist_C$"
+ tec_pluralist_A_modifier:0 "$policy_option_tec_pluralist_A$"
+ tec_pluralist_B_modifier:0 "$policy_option_tec_pluralist_B$"
+ tec_pluralist_C_modifier:0 "$policy_option_tec_pluralist_C$"
+ tec_gestalt_empathy_A_modifier:0 "$policy_option_tec_gestalt_empathy_A$"
+ tec_gestalt_empathy_B_modifier:0 "$policy_option_tec_gestalt_empathy_B$"
+ tec_gestalt_empathy_C_modifier:0 "$policy_option_tec_gestalt_empathy_C$"
+ tec_gestalt_apathy_A_modifier:0 "$policy_option_tec_gestalt_apathy_A$"
+ tec_gestalt_apathy_B_modifier:0 "$policy_option_tec_gestalt_apathy_B$"
+ tec_gestalt_apathy_C_modifier:0 "$policy_option_tec_gestalt_apathy_C$"
+ tec_gestalt_preservation_A_modifier:0 "$policy_option_tec_gestalt_preservation_A$"
+ tec_gestalt_preservation_B_modifier:0 "$policy_option_tec_gestalt_preservation_B$"
+ tec_gestalt_preservation_C_modifier:0 "$policy_option_tec_gestalt_preservation_C$"
+ tec_gestalt_overconsumption_A_modifier:0 "$policy_option_tec_gestalt_overconsumption_A$"
+ tec_gestalt_overconsumption_B_modifier:0 "$policy_option_tec_gestalt_overconsumption_B$"
+ tec_gestalt_overconsumption_C_modifier:0 "$policy_option_tec_gestalt_overconsumption_C$"
+ tec_gestalt_introspective_A_modifier:0 "$policy_option_tec_gestalt_introspective_A$"
+ tec_gestalt_introspective_B_modifier:0 "$policy_option_tec_gestalt_introspective_B$"
+ tec_gestalt_introspective_C_modifier:0 "$policy_option_tec_gestalt_introspective_C$"
+ tec_gestalt_extrospective_A_modifier:0 "$policy_option_tec_gestalt_extrospective_A$"
+ tec_gestalt_extrospective_B_modifier:0 "$policy_option_tec_gestalt_extrospective_B$"
+ tec_gestalt_extrospective_C_modifier:0 "$policy_option_tec_gestalt_extrospective_C$"
