several changes already doc on the changelog

--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -493,6 +493,18 @@
 			policy_option_fanatic_tec_cooperative_C_name:0 "$policy_option_tec_cooperative_C$"
 			policy_option_fanatic_tec_cooperative_C_desc:0 "Everyone should have the means to live and thrive as they desire; less work days, better public systems, healthier diet and better public spaces will ensure they do.\n\n§EThis policy is focused on §HPop Performance§!§!\n£pop£ Pops consume §R1§! extra §Y$tec_loc_amenities$§! but gain extra £job£ §GOutput§! and §Y$tec_loc_happiness$§!"
 
+			# Extra policy for state workers
+			policy_tec_cooperative_state_workers_policy:0 "$ethic_socialism$ State Workers Policy"
+			policy_tec_cooperative_state_workers_policy_desc:0 "Investing in socially covered jobs is an extra effort, and as such we must make a proper decision to ensure our kind safety and prosperity"
+
+			policy_option_tec_cooperative_state_workers_enable:0 "Fund State Workers"
+			policy_option_tec_cooperative_state_workers_enable_name:0 "$policy_option_tec_cooperative_state_workers_enable$"
+			policy_option_tec_cooperative_state_workers_enable_desc:0 "We will invest extra effort on ensuring no one in our empire will suffer unemployment or exclusion, as they will be immediately assigned to a public vacant.\n\n§E£job_tec_state_worker£ State workers jobs are §HEnabled§! regardless of present buildings, and will be automatically assigned to unemployed jobs§!"
+
+			policy_option_tec_cooperative_state_workers_restrict:0 "Restrict State Workers"
+			policy_option_tec_cooperative_state_workers_restrict_name:0 "$policy_option_tec_cooperative_state_workers_restrict$"
+			policy_option_tec_cooperative_state_workers_restrict_desc:0 "While public employment is a benefit for the empire, we must redirect unemployment towards more urgent means of production.\n\n§E£job_tec_state_worker£ State workers jobs will be §HDisabled§!, except on planets with £building£ §HState Agency§!, §HAid Center§! or §HEducation Center§! buildings present§!"
+
 		#- Competitive
 		# > +10-20% Trade value
 		# > Upgraded entepreneur buildings?
