--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -993,7 +993,7 @@
 		concept_tec_policy_option_robot_pops_outlawed_alias_icon: "£policy£ $policy_robot_pop_policy$ $robot_pops_outlawed$"
 		concept_tec_policy_option_robot_pops_outlawed_desc: "§YOption of ['concept_tec_policy_robot_pop_policy_icon']§!\n\n$robot_pops_outlawed_desc$"
 
-		concept_tec_policy_option_robot_pops_allowed: "$policy_robot_pop_policy$ robot_pops_allowed$ Policy Option"
+		concept_tec_policy_option_robot_pops_allowed: "$policy_robot_pop_policy$ $robot_pops_allowed$ Policy Option"
 		concept_tec_policy_option_robot_pops_allowed_alias: "$policy_robot_pop_policy$ $robot_pops_allowed$"
 		concept_tec_policy_option_robot_pops_allowed_icon: "£policy£ $policy_robot_pop_policy$ $robot_pops_allowed$ Policy Option"
 		concept_tec_policy_option_robot_pops_allowed_alias_icon: "£policy£ $policy_robot_pop_policy$ $robot_pops_allowed$"
