civic councilors adjustments

--- a/localisation/english/zz_evolved_crisis_l_english.yml
+++ b/localisation/english/zz_evolved_crisis_l_english.yml
@@ -82,6 +82,11 @@
  tec_emergence.105.a:0 "TO DO."
  tec_emergence.105.b:0 "TO DO."
 
+ tec_emergence.105.name:0 "The Emergence"
+ tec_emergence.105.desc:0 "No no no no .... this is not right, this is not possible!\nYou know what we have done to achieve this? ARE YOU EVEN AWARE? Of course you are not, but you will be...\nOr perhaps no as "
+ tec_emergence.105.a:0 "TO DO."
+ tec_emergence.105.b:0 "TO DO."
+
 # --------------------------- Codename PRO --------------------------------
 # The protocol
 # We know what you are, what you already was, and we know oblivion awaits what you will be
