faction fixes + governor adjustments

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -1510,7 +1510,7 @@
 	civic_tec_corporate_corvee:0 "Corvee Benefits"
 	civic_tec_corporate_corvee_desc:0 "This Megacorp considers it the absolute right of the shareholders to decide where its workers live and consume."
 
-	civic_private_prospectors_tooltip:2 "§HUnlocks Ship Type:§! Private Colony Ship\n$MOD_COUNTRY_ADMIN_CAP_ADD$: §G+20§!"
+	civic_private_prospectors_tooltip:2 "§HUnlocks Ship Type:§! Private Colony Ship\n$tec_loc_admincap$: §G+20§!"
 # /
 
 # Megacorp Not implemented
@@ -1920,7 +1920,7 @@
 
 	civic_tec_machine_omega_directive:0 "Omega Directive"
 	civic_tec_machine_omega_directive_desc:0 "TO DO "
-	civic_tec_machine_omega_directive_tooltip:0 "$tec_tooltip_machine_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class provide additional £mod_country_admin_cap_add£ §Y$MOD_COUNTRY_ADMIN_CAP_ADD$§! per $tec_loc_capital_tier$.\nTO DO"
+	civic_tec_machine_omega_directive_tooltip:0 "$tec_tooltip_machine_directive_civic$\n\n£job_tec_prime_drone£ Prime Drones of any class provide additional §Y$tec_loc_admincap$§! per $tec_loc_capital_tier$.\nTO DO"
  # /
 
 # Machine Feature Civics
