--- a/localisation/english/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/zz_evolved_ascension_l_english.yml
@@ -644,17 +644,17 @@
 	ap_imperial_prerogative:0 "Administrative Prerogative"
 	ap_imperial_prerogative_desc:0 "As our civilization continues to grow, so its beating heart must also expand. More systems will be placed under our direct control, so those dedicated to maintain it must be even more effective."
 	ap_imperial_prerogative_bonus:0 "§YA§!"
-	ap_imperial_prerogative_effects:0 "£mod_country_admin_cap_add£ §Y$MOD_COUNTRY_ADMIN_CAP_ADD$§! jobs will produce additional £unity£ §YUnity§! and £Amenities£§YAmenities§!.§!"
+	ap_imperial_prerogative_effects:0 "§Y$tec_loc_admincap$§! jobs will produce additional £unity£ §YUnity§! and £Amenities£§YAmenities§!.§!"
 
-	tec_imperial_prerogative_gestalt_effects:0 "£mod_country_admin_cap_add£ §Y$MOD_COUNTRY_ADMIN_CAP_ADD$§! jobs will produce additional £stability£§YStability§! and £Amenities£§YAmenities§!.§!"
+	tec_imperial_prerogative_gestalt_effects:0 "§Y$tec_loc_admincap$§! jobs will produce additional £stability£§YStability§! and £Amenities£§YAmenities§!.§!"
 
 
 	ap_tec_manifested_will:0 "Manifested Will"
 	ap_tec_manifested_will_desc:0 "As our civilization continues to grow, so its beating heart must also expand and each way of ensuring it is a way to prove ourselves. More systems will be placed under our direct control, so more systems must be imposed to maintain it."
 	tec_manifested_will_bonus:0 "§YA§!"
-	tec_manifested_will_effects:0 "£mod_country_admin_cap_add£ §Y$MOD_COUNTRY_ADMIN_CAP_ADD$§! jobs will produce additional £unity£ §YUnity§! and £Amenities£§YAmenities§!.§!"
+	tec_manifested_will_effects:0 "§Y$tec_loc_admincap$§! jobs will produce additional £unity£ §YUnity§! and £Amenities£§YAmenities§!.§!"
 
-	tec_manifested_will_gestalt_effects:0 "£mod_country_admin_cap_add£ §Y$MOD_COUNTRY_ADMIN_CAP_ADD$§! jobs will produce additional £stability£§YStability§! and £Amenities£§YAmenities§!.§!"
+	tec_manifested_will_gestalt_effects:0 "§Y$tec_loc_admincap$§! jobs will produce additional £stability£§YStability§! and £Amenities£§YAmenities§!.§!"
 
 # ------------------- Taking this one allows going into one of these 2
 #Merged with future society and rebranded
