--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -271,7 +271,7 @@ tec_jump_empty:0 "\n\n"
  job_tec_technocrat:0 "Technocrat"
  job_tec_technocrat_plural:0 "Technocrats"
  job_tec_technocrat_desc:0 "Highly skilled individuals experts in politics, science and technical affairs, fully dedicated to serve its society by meticulously ensuring the efficiency of every system and the proficiency of the finest and latest technological development."
- job_tec_technocrat_effect_desc:0 "£job_tec_technocrat£ $job_tec_technocrat_plural$ provides £mod_country_admin_cap_add£ §Y$MOD_COUNTRY_ADMIN_CAP_ADD$§!, £unity£ §YUnity§!, £amenities£ §YAmenities§! and boost §YResearch Output§! on the planet."
+ job_tec_technocrat_effect_desc:0 "£job_tec_technocrat£ $job_tec_technocrat_plural$ provides §Y$tec_loc_admincap$§!, £unity£ §YUnity§!, £amenities£ §YAmenities§! and boost §YResearch Output§! on the planet."
  mod_job_tec_technocrat_per_pop:0 "§G+1§! $job_tec_technocrat$ Job Per $VALUE$ Pops"
  mod_job_tec_technocrat_per_pop_short:0 "\n§G+1§! £job_tec_technocrat_add£ per $VALUE$ £pop£"
  mod_job_tec_technocrat_per_pop:0 "§G+1§! $job_tec_technocrat$ Job Per $VALUE$ Pops"
