--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -83,6 +83,9 @@
 
  tr_versatility_spatial_optimization_tooltip:0 "£building£ §YCapital Buildings§! provide the planet with §G+5%§! £housing£ Housing, up to §G+20%§!."
 
+# ------------------------------------------------- Aptitude
+ tr_aptitude_champions_of_the_empire_desc:1 "Per $admiral_with_icon$ and $general_with_icon$ level\n$t$$MOD_COUNTRY_NAVAL_CAP_ADD$: §G+2§!\nPer $governor_with_icon$ level\n$t$$tec_loc_admincap$: §G+1§!\nPer $scientist_with_icon$ level\n$t$$MOD_LEADER_SPECIES_EXP_GAIN$: §G+0.5%§!"
+
 # Psionic
 # ------------------------------------------------------------
  tradition_tec_vanilla_psionics:0 "Psionic"
