Geologist rework, made ecologist blocker replacements count as natural blockers for effects, adjusted toxic baths to count for evolved industrial districts(and modded)

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1575,3 +1575,9 @@ trait_tec_aiauth_planetary_node: "Planetary AI Node"
 trait_tec_aiauth_planetary_node_desc: "The Planetary AI Node, housed within the $building_tec_planetary_node_center$, diligently controlls and manages the complexities of its assigned planet. Leveraging its computational prowess, the Planetary AI Node optimizes productivity, allocates resources, and ensures the harmonious development of its world."
 
 # /
+
+# Leader traits
+
+geologist_custom_desc:2 "$PLANET_EFFECTS_TXT$:\n$t$Leader produces §Y2 $tec_loc_research_resources$§! for each §Y$tec_loc_basic_resources$ $tec_loc_district$§! Max increase\n$t$Leader produces §Y1 $tec_loc_strategic_resources$§! for each §Y$tec_loc_strategic_resources$ $tec_loc_building$§! Job Max increase"
+geologist_custom_desc_2:1 "$PLANET_EFFECTS_TXT$:\n$t$Leader produces §Y3 $tec_loc_research_resources$§! for each §Y$tec_loc_basic_resources$ $tec_loc_district$§! Max increase\n$t$Leader produces §Y1.5 $tec_loc_strategic_resources$§! for each §Y$tec_loc_strategic_resources$ $tec_loc_building$§! Job Max increase"
+geologist_custom_desc_3:1 "$PLANET_EFFECTS_TXT$:\n$t$Leader produces §Y4 $tec_loc_research_resources$§! for each §Y$tec_loc_basic_resources$ $tec_loc_district$§! Max increase\n$t$Leader produces §Y2 $tec_loc_strategic_resources$§! for each §Y$tec_loc_strategic_resources$ $tec_loc_building$§! Job Max increase"
