--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -56,6 +56,8 @@
 	tec_loc_volatile_motes:0 "£volatile_motes£ §Y$volatile_motes$§!"
 	tec_loc_minor_artifacts:0 "£minor_artifacts£ §Y$minor_artifacts$§!"
 
+	tec_loc_strategic_resources: "£rare_crystals£ £exotic_gases£ £volatile_motes£ §YStrategic Resources§!"
+
  # Fake resource locs
 	tec_loc_housing: "£housing£ $PLANET_HOUSING_TITLE$"
 	tec_loc_amenities: "£amenities£ $PLANET_AMENITIES_TITLE$"
@@ -70,6 +72,10 @@
 
 	tec_loc_edict_capacity: "£mod_country_edict_fund_add£ Edict Capacity"
 	tec_loc_admincap: "£mod_country_admin_cap_add£ $MOD_COUNTRY_ADMIN_CAP_ADD$"
+
+	tec_loc_district: "£district£ District"
+	tec_loc_building: "£building£ Building"
+
 
 	tec_loc_sr_tec_ai_power: "£sr_tec_ai_power£ $sr_tec_ai_power$"
 
