Capped geologist to max planet size

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -56,7 +56,7 @@
 	tec_loc_volatile_motes:0 "£volatile_motes£ §Y$volatile_motes$§!"
 	tec_loc_minor_artifacts:0 "£minor_artifacts£ §Y$minor_artifacts$§!"
 
-	tec_loc_strategic_resources: "£rare_crystals£ £exotic_gases£ £volatile_motes£ §YStrategic Resources§!"
+	tec_loc_strategic_resources: "£trigger_tec_rare_resources£ §YStrategic Resources§!"
 
  # Fake resource locs
 	tec_loc_housing: "£housing£ $PLANET_HOUSING_TITLE$"
