Living standard noramlization and some smaller fixes

--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -524,3 +524,8 @@
 	councilor_tec_aiauth_fragment_scientist_desc: "The Scientist AI Node pioneers research and technological advancements, unraveling the universe's mysteries."
  # /
 # /
+
+# Modifiers
+
+mod_councilor_defense_exp_gain:1 "$councilor_defense$ $exp_gain$"
+mod_councilor_tec_aiauth_development_exp_gain:1 "$councilor_tec_aiauth_development$ $exp_gain$"
