--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -586,7 +586,7 @@
 	civic_relentless_industrialists_desc:0 "['concept_tec_feature_civic']\n\nTo live is to exploit. This civilization is built around the principle of living life to the fullest, in the sense of squeezing the maximum profit from every last ounce of matter and membrane available for exploitation."
 	civic_tooltip_relentless_industrialists_effects:0 "Can build £building£ §Y$building_coordinated_fulfillment_center_1$§!, significantly increasing £alloys£ §YAlloy§! and £consumer_goods£ §YConsumer Goods§! output at the cost of reduced £mod_pop_growth_speed£ §YPop Growth§! and gradually turning planets into §YTomb Worlds§!."
 
-	civic_corporate_relentless_industrialists:0 "§L£tec_civic_feature£§!$civic_relentless_industrialists$"
+	civic_corporate_relentless_industrialists:0 "§L£tec_civic_feature£§! Relentless Industrialists"
 	civic_corporate_relentless_industrialists_desc:0 "$civic_relentless_industrialists_desc$"
 
 	civic_scavengers:0 "§L£tec_civic_feature£§!Scavengers"
