Fixed some small issues and locs, moved some modifiers for policies out of static modifiers

--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -517,7 +517,7 @@
 
 			policy_option_tec_competitive_A:0 "$ethic_capitalism$ Freedom"
 			policy_option_tec_competitive_A_name:0 "$policy_option_tec_competitive_A$"
-			policy_option_tec_competitive_A_desc:0 "We must encourage our citizens to invest, to create value, to redirect the economic flow towards progress.\n\n§EThis policy is focused on §HPop Entrepreneurship§!"
+			policy_option_tec_competitive_A_desc:0 "We must encourage our citizens to invest, to create value, to redirect the economic flow towards progress.\n\n§EThis policy is focused on §HPop Entrepreneurship§!§!"
 
 			policy_option_fanatic_tec_competitive_A:0 "$policy_option_tec_competitive_A$"
 			policy_option_fanatic_tec_competitive_A_name:0 "$policy_option_tec_competitive_A$"
