--- a/localisation/english/zz_evolved_events_lore_l_english.yml
+++ b/localisation/english/zz_evolved_events_lore_l_english.yml
@@ -1032,10 +1032,12 @@ factions.2000.desc.manufacturers:0 "As a result of bringing this faction into th
  pm_tec_country_ai_power_defaulted: "Internal Restructuring (Defaulted)"
  tec_string_expenditures_greater_than_income_ai_power: "$sr_tec_ai_power$ Deficit"
  tec_string_not_in_deficit_ai_power: "Positive Monthly $sr_tec_ai_power$ Balance"
- tec_deficit_approach_allocate_more_computation_power: "Invest in [Owner.GetAdministratorNoPriest]"
+ tec_deficit_approach_allocate_more_computation_power: "Invest in [Owner.GetAdministratorNoPriestPlural]"
  situation_tec_ai_power_deficit: "$sr_tec_ai_power$ Shortage"
  situation_tec_ai_power_deficit_type: "$situation_tec_ai_power_deficit$"
  situation_tec_ai_power_deficit_desc: "Our AI Capacity needs are above what is produced! $situation_deficit_desc_base$"
+ situation_tec_ai_power_deficit_monthly_change_tooltip: ""
+
 
  tec_aiauth.200.name:0 "$deficit.100.name$"
  tec_aiauth.200.desc: "As the empire nears the precipice of the AI Capacity deficit, the resolute voice of [Owner.GetFinancialAdvisorAgencyCap] echoes through our digital channels. With calculated precision, it urgently recommends downsizing the AI Administration and reallocating resources to sustain core functionality. The node warns of dire consequences without action, projecting a future of stagnation and collapse. It implores the ruling organics and central AI Node to address the growing disparity by increasing AI Capacity."
