--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -727,7 +727,7 @@
 	civic_heroic_tales_effects:0 ""
 
 	civic_crusader_spirit:0 "§M£tec_civic_leader£§!Crusader Spirit"
-	civic_crusader_spirit_desc:0 "['concept_tec_leader_civic']\n\nThe lack of guidance creates weak minds - which easily succumb to corruption and plunge into decadence. This society has assumed the self-imposed mantle of bringing "enlightenment" to the masses through aggressive proselytizing."
+	civic_crusader_spirit_desc:0 "['concept_tec_leader_civic']\n\nThe lack of guidance creates weak minds - which easily succumb to corruption and plunge into decadence. This society has assumed the self-imposed mantle of bringing ''enlightenment'' to the masses through aggressive proselytizing."
 	civic_tooltip_crusader_spirit_effects:0 "§YAdmirals§! start with the §YZealot§! trait\n§YGenerals§! start with the §YCrusader§! trait\nCan only use §YLiberation Wars§! policy"
  # /
  # Evolved
@@ -1481,7 +1481,7 @@
  # Vanilla
 	civic_corporate_catalytic_processing:1 "§P£tec_civic_job£§!Catalytic Recyclers"
 	civic_corporate_catalytic_processing_desc:0 "['concept_tec_job_alteration_civic']\n\nThis Megacorporation seeks to maximize profits by recycling excess organic matter into advanced resources suitable for spacebound structures."
-	civic_tooltip_catalytic_processing_corporate_effects:0 "$civic_tooltip_catalytic_processing_effects$"
+	civic_catalytic_processing_corporate_tooltip:0 "$civic_tooltip_catalytic_processing_effects$"
 
 	civic_corporate_crafters:0 "§P£tec_civic_job£§!Mastercraft Inc."
 	civic_corporate_crafters_desc:0 "['concept_tec_job_alteration_civic']\n\nThis megacorporation has focused its production pipeline solely on goods of the highest quality and profit margins, creating and marketing stunning products with artistry and craft."
@@ -2228,15 +2228,6 @@
  allows_anarchy_utopia:0 "Unlocks §YEconomy Focus§! policy: §YPost-Industrial Economy§!."
 
 
-# Scripts and etc
-	mod_shipclass_colonizer_build_cost_mult: "Colonizer cost"
-	mod_rivalries_influence_produces_mult:0 "Rivalry Influence Gain"
-
-	gov_bur_collectivism:0 "Bureaucratic Collectivism" 
-	gov_bur_collectivism_desc:0 "A bureaucratic Cooperative state owns the means of production, while the surplus or profit is distributed among an elite party bureaucracy, rather than among the working class."
-# /
-
-
 # ORGANIZAR
 # ------------------------------------------------------------
  # Hive
@@ -2250,12 +2241,6 @@
 	civic_machine_maintenance_protocols:0 "Maintenance Protocols"
 	civic_machine_maintenance_protocols_desc:0 "Our Machine Intelligence prioritizes regular maintenance of our units. Maintenance Drones regularly upgrade and adjust our units for maximum efficiency and compatibility."
 
- # Catalytic rework
- # Regular
-
-
-
-# Vanilla ordered
 
 # ------------------------------------------------------------
 # ------------------------------------------------------------
