--- a/localisation/english/zz_evolved_diplomacy_l_english.yml
+++ b/localisation/english/zz_evolved_diplomacy_l_english.yml
@@ -110,7 +110,7 @@
 
  BRANCH_OFFICE_TEC_NOT_COOPERACORP:1 "£trigger_no£ §ROnly ''Corporative Sub-Branching'' Megacorps can establish a Branch office on a Megacorp planet and allow other Megacorps to build Branch offices on their planets.§!"
 
- BRANCH_OFFICE_TEC_ONLY_EMPATHIC_GESTALTS:0 "£trigger_no£ §ROnly Regular empires and Empathic Gestalts, or gestalts in the same federation, can host a branch office.§!"
+ BRANCH_OFFICE_TEC_ONLY_EMPATHIC_GESTALTS:0 "£trigger_no£ §ROnly Regular empires and Empathic Gestalts can host a branch office.§!"
 
  BRANCH_OFFICE_TEC_NOT_SYMBIOTIC:1 "£trigger_no£ §ROnly §Ysymbiotic Collectives§! can establish Symbiotic Branches§!"
  BRANCH_OFFICE_TEC_NOT_SYMBIOTIC_MACHINE:1 "£trigger_no£ §ROnly §YCooperative Collectives§! can establish Branch Offices§!"
